// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly displays button for teacher/admin 1`] = `
<div>
  <Iframe
    height="400em"
    name="lti-iframe"
    url=""
    width="800em"
  />
  <Button
    as="button"
    color="secondary"
    cursor="pointer"
    display="inline-block"
    elementRef={[Function]}
    href="http://ucla.libsurveys.com/rg-feedback"
    margin="small"
    rel="noopener roreferrer"
    size="medium"
    target="_blank"
    textAlign="center"
    type="button"
    withBackground={true}
  >
    Library resources feedback
  </Button>
</div>
`;

exports[`Correctly hides button for student 1`] = `
<div>
  <Iframe
    height="400em"
    name="lti-iframe"
    url=""
    width="800em"
  />
</div>
`;
